fixed broken styles - oops! 😅

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -25,9 +25,10 @@ header {
   margin: 0 auto;
   width: 100%;
   position: fixed;
-  background-color: rgba(0, 0, 0, 0.912);
+  background-color: rgba(0, 0, 0, 0.9);
   color: white;
   padding-block: 10px;
+  z-index: 2;
 }
 
 header > button {
